--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,32 +2,53 @@
 .footer-wrapper {
   display: flex;
   flex-direction: column;
-  margin-bottom: 5%;
+  margin-bottom: 20%;
 }
 
 .footer-container h2 {
-  font-size: 2.1em;
-  margin-top: 10%;
+  font-size: 1.5em;
+  margin-top: 8%;
+  margin-bottom: 6%;
   margin-left: 4.5%;
-}
-
-.footer-container h2 {
   color: white;
-  margin-top: 10%;
+}
+.footer-container h3 {
+  font-size: 1.5em;
+  font-family: BNGrimer;
+  color: white;
   margin-left: 4.5%;
+  margin-bottom: 6%;
+  padding-top: 6%;
 }
 
 .footer-container p {
   font-size: 1em;
   color: white;
   margin-left: 4.5%;
-  margin-top: 3%;
+  font-family: Roboto;
+  color: white;
+  padding: 3%;
+  padding-left: 0;
 }
 
 .icons-wrapper {
-  margin-top: 4%;
+  margin-top: 8%;
   margin-bottom: 5%;
   margin-left: 4.5%;
+}
+
+.icons-wrapper img {
+  margin-right: 10px;
+  width: 25px;
+  height: 25px;
+}
+
+.footer-wrapper hr {
+  height: 1px;
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 4%;
 }
 
 /* Tablet screen */
@@ -43,62 +64,45 @@
 /* Desktop screen*/
 @media screen and (min-width: 768px) {
   .footer-wrapper {
-    width: 100vw;
     display: flex;
     flex-direction: row;
     flex: 50%;
-    margin-bottom: 5%;
+    margin-bottom: 8%;
+    margin-left: 2.5%;
   }
   .footer-container {
     position: relative;
     display: inline-block;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 5%;
-    margin-left: 2.5%;
-    padding: 2%;
+  }
+  .footer-wrapper h2 {
+    font-family: BNGrimer;
+    font-size: 3.2em;
+    margin-top: 0%;
+  }
+  /* kontakt */
+  .footer-wrapper h3 {
+    font-family: BNGrimer;
+    font-size: 2em;
+    color: white;
+    z-index: 1;
+    padding-top: 0;
+  }
+  .footer-wrapper p {
+    font-family: Roboto;
+    font-size: 1em;
+    padding-left: 0;
+  }
+  .footer-wrapper hr {
+    display: none;
   }
   .icons-wrapper {
-    display: flex;
-  }
-  .icons {
-    padding-right: 3%;
-  }
-}
-
-/* Big desktop*/
-@media screen and (min-width: 1024px) {
-  .footer-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
+    margin-top: 4%;
     margin-bottom: 5%;
   }
-  .footer-container {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin-top: 5%;
-  }
-}
-
-/* XL desktop */
-@media screen and (min-width: 1280px) {
-  .footer-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex: 50%;
-    margin-bottom: 5%;
-  }
-  .footer-container {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    margin-top: 5%;
+  .icons-wrapper img {
+    margin-right: 10px;
   }
 }
